--- a/referal.htm
+++ b/referal.htm
@@ -123,7 +123,7 @@
                 const formData = new FormData(form);
                 const jsonData = Object.fromEntries(formData.entries());
 
-                fetch('http://localhost:5000/referal', {
+                fetch('http://192.168.1.17:5000/referal', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
